--- a/index.html
+++ b/index.html
@@ -319,11 +319,17 @@
                         </div>
                     )}
 
-                    <header className="relative w-full py-12 px-6 bg-gradient-to-b from-zinc-900 to-zinc-950 border-b border-amber-500/20">
-                        <div className="max-w-3xl mx-auto text-center flex flex-col items-center">
-                            <div className="inline-block p-4 rounded-full bg-zinc-900 border border-amber-500/30 shadow-[0_0_20px_rgba(245,158,11,0.3)]"><MargaritaIcon className="w-16 h-16 text-amber-500" /></div>
-                            <h1 className="text-4xl md:text-6xl font-serif font-bold text-transparent bg-clip-text bg-gradient-to-r from-amber-400 via-orange-500 to-amber-400 tracking-tight mt-2">MARGARITA</h1>
-                            <p className="text-amber-500/80 tracking-[0.2em] text-sm md:text-base uppercase font-medium mt-3">Restaurant & Lounge</p>
+                    <header className="relative w-full py-8 px-4 bg-gradient-to-b from-zinc-900 to-zinc-950 border-b border-amber-500/20">
+                        <div className="max-w-4xl mx-auto text-center flex flex-col items-center justify-center">
+                            {/* Logo ocupando MÁS espacio (w-full con max-width aumentado) */}
+                            <div className="w-full flex justify-center">
+                                <img 
+                                    src="./logo.png" 
+                                    alt="Logo Margarita" 
+                                    /* CAMBIO: w-full para que intente ocupar todo, con límites máximos mucho mayores */
+                                    className="w-full max-w-[350px] md:max-w-[500px] h-auto object-contain drop-shadow-[0_0_4px_#f59e0b]" 
+                                />
+                            </div>
                         </div>
                     </header>
 
